--- a/qr.html
+++ b/qr.html
@@ -2,157 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirection - Onin Technologie</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #003366 0%, #0066cc 25%, #3399ff 50%, #66b3ff 75%, #99ccff 100%);
-            min-height: 100vh;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 2rem;
-        }
-
-        .logo img {
-            max-width: 200px;
-            height: auto;
-            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
-            margin-bottom: 2rem;
-            animation: fadeInDown 1s ease-out;
-        }
-
-        .redirect-container {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 3rem;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            animation: fadeInUp 1s ease-out 0.3s both;
-            max-width: 500px;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1.5rem;
-            font-weight: bold;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            color: #ffffff;
-        }
-
-        .redirect-message {
-            font-size: 1.2rem;
-            margin-bottom: 3rem;
-            line-height: 1.6;
-            opacity: 0.9;
-        }
-
-        .skip-button {
-            padding: 1rem 2rem;
-            background: linear-gradient(145deg, #4ecdc4, #45b7d1);
-            border: none;
-            border-radius: 25px;
-            color: white;
-            font-size: 1.1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .skip-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-            background: linear-gradient(145deg, #45b7d1, #4ecdc4);
-        }
-
-        @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-
-        @media (max-width: 768px) {
-            .logo img {
-                max-width: 150px;
-            }
-
-            h1 {
-                font-size: 2rem;
-            }
-
-            .redirect-container {
-                padding: 2rem;
-            }
-
-        }
-    </style>
+    <title>Redirection</title>
 </head>
 <body>
-    <div class="logo">
-        <img src="Pictures/Logo Onin.png" alt="Logo Onin Technologie">
-    </div>
-
-    <div class="redirect-container">
-        <h1>Redirection</h1>
-        <div class="redirect-message">
-            <p>Cliquez sur le bouton ci-dessous pour accéder à votre destination</p>
-        </div>
-        <a href="#" class="skip-button" id="skipButton">Accéder au site</a>
-    </div>
-
     <script>
-        // ===== CONFIGURATION À PERSONNALISER =====
-        const REDIRECT_URL = "https://ninoblz.github.io/Portfolio/index.html"; // Changez cette URL vers votre destination
-        // =========================================
-
-        const skipButton = document.getElementById('skipButton');
-
-        // Configurer le bouton de redirection
-        skipButton.href = REDIRECT_URL;
-
-        // Redirection automatique dès que la page est chargée
-        window.addEventListener('load', () => {
-            window.location.href = REDIRECT_URL;
-        });
-
-        // Redirection au clic (au cas où)
-        skipButton.addEventListener('click', (e) => {
-            e.preventDefault();
-            window.location.href = REDIRECT_URL;
-        });
+        const REDIRECT_URL = "https://ninoblz.github.io/Portfolio/index.html";
+        window.location.href = REDIRECT_URL;
     </script>
 </body>
 </html>
