--- a/qr.html
+++ b/qr.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script>
-        const REDIRECT_URL = "https://ninoblz.github.io/Portfolio/index.html";
+        const REDIRECT_URL = "http://onin-technologie.fr";
         window.location.href = REDIRECT_URL;
     </script>
 </body>
