--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="theme-color" content="#1e40af" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#3b82f6" media="(prefers-color-scheme: dark)">
 
+    <!-- Cache Control -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <!-- SEO Meta Tags -->
     <title>Onin Technologie - Développeur Web & Solutions Digitales</title>
     <meta name="description" content="Découvrez mes projets de développement web, applications modernes et solutions digitales. Portfolio et réalisations créatives.">
@@ -67,7 +72,7 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"></noscript>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2024120301">
 
     <!-- Skip Link for Accessibility -->
     <style>
