--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,11 @@
     <meta name="theme-color" content="#1e40af" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#3b82f6" media="(prefers-color-scheme: dark)">
 
+    <!-- Cache Control -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <!-- SEO Meta Tags -->
     <title>Mes Projets Web - Onin Technologie</title>
     <meta name="description" content="Découvrez tous mes projets web, applications et réalisations. Portfolio complet de mes créations digitales et solutions technologiques.">
@@ -75,7 +80,7 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"></noscript>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2024120301">
 
     <!-- Skip Link for Accessibility -->
     <style>
